apply plugin: 'java-library'
apply plugin: 'jacoco'
apply plugin: 'maven-publish'
apply plugin: 'idea'

java {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21

  withJavadocJar()
  withSourcesJar()
}

version '0.1.1'

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
  implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.4.1'
  implementation 'org.eclipse.californium:californium-core:2.6.3'
  implementation 'com.google.code.gson:gson:2.11.0'
  implementation 'org.slf4j:slf4j-api:2.0.16'

  implementation 'org.apache.commons:commons-collections4:4.5.0-M2'
  implementation 'commons-io:commons-io:2.18.0'

  implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-turtle', version: '5.1.0'
  implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-jsonld', version: '5.1.0'
  implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-model', version: '5.1.0'

  // Use JUnit test framework
  testImplementation 'junit:junit:4.13.2'
  // https://mvnrepository.com/artifact/org.mockito/mockito-core
  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.2'
  testImplementation 'org.apache.httpcomponents:httpclient:4.5.14'

  runtimeOnly 'org.slf4j:slf4j-log4j12:2.0.16'
}

jacocoTestReport {
  reports {
    xml.required.set true
    html.required.set false
  }
}

publishing {
  publications {
    ai4industry(MavenPublication) {
      from components.java
      groupId 'ch.unisg.ics.interactions'
      artifactId 'wot-td-java'
      version '0.1.1'
    }
  }

  repositories {
    maven {
      url = "file://${layout.buildDirectory}/repo"
    }
  }
}

javadoc {
  if (JavaVersion.current().isJava9Compatible()) {
    options.addBooleanOption('html5', true)
  }
}
